tests/baselines/reference/iterableArrayPattern5.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern5.ts(2,5): error TS2322: Type 'Foo' is not assignable to type 'string'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern5.ts (1 errors) ====
    var a: Bar, b: string;
    [a, b] = new FooIterator;
        ~
!!! error TS2322: Type 'Foo' is not assignable to type 'string'.
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }